--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "exerciseapp",
+  "name": "kanjiexerciser",
+  "homepage": "https://teyypro.github.io/kanjipractiser",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0"
